--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/fishsoup.html">Clear Fish Noodle Soup</a></li>
+        <li><a href="recipes/pasta.html">Pasta</a></li>
+        <li><a href="recipes/maggii.html">Cheese Maggii</a></li>
+        <li><a href="recipes/chai.html">Masala Chai</a></li>
+    </ul>
 </body>
 </html>
