Updated chai recipe

--- a/recipes/chai.html
+++ b/recipes/chai.html
@@ -7,6 +7,25 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Chai</h1>
+    <h1>Masala Chai</h1>
+    <img src="..\images\chai.jpg">
+    <p>This is a simple Indian drink that is beautifully aromatic, sweet, spicy and incredibly flavourful. It is incredibly easy to prepare by boiling tea leaves with some basic spices and sugar and finishing it off with milk. Its preparation time is at most 5 min</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Assam tea leaves</li>
+        <li>Sugar</li>
+        <li>Water</li>
+        <li>Milk</li>
+        <li>Ready-made masala chai spice mix (grounded cardamon, cloves, ginger)</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Add two teaspoons of tea leaves and sugar to two cups of water.</li>
+        <li>Add spice mix to the water till it completely coats the surface of the water</li>
+        <li>Boil on high heat till the colour of the water darkens and it starts to rise</li>
+        <li>Lower the heat and add a splash of milk till the colour of the mixture turns tanned</li>
+        <li>Turn on the heat and boil till the milk rises</li>
+        <li>Pour in 2 earthen cup for extra xp points and enjoy with friends :)</li>
+    </ol>
 </body>
 </html>
