--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -7,6 +7,30 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Pasta</h1>
+    <h1>Spaghetti Alfredo</h1>
+    <img src="../images/pasta.jpeg">
+    <p>This is a recipe for a simple spaghetti pasta with white sauce that can be made in less than half an hour. It involves boiling the spaghetti and adding it to a white sauce made with cream, parmesan cheese, herbs and spices. While this might not be the most traditional or authentic way of cooking this dish we shall be compromising taste for speed.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Spaghetti pasta</li>
+        <li>Cream</li>
+        <li>Pepper</li>
+        <li>Garlic</li>
+        <li>Olive oil</li>
+        <li>Cream</li>
+        <li>Parmesan cheese (shredded)</li>
+        <li>Nutmeg</li>
+        <li>Oregano</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Boil spaghetti in a bowl of salted water till they turn opaque. Taste to see if they are cooked appropriately</li>
+        <li>Sautee some garlic in another pan with olive oil</li>
+        <li>Add half a cup of cream along with some leftover pasta stock to the pan along with 250g shredded parmesan chese. Reduce the mixture till it has a sticky and thick consistency</li>
+        <li>Add some pepper, nutmeg and oregano to the pasta to give it an earthy flavor</li>
+        <li>Drain the pasta and mix it with the sauce till it forms an even coating</li>
+        <li>Add salt as per taste</li>
+        <li>Enjoy :)</li>
+    </ol>
 </body>
 </html>
