--- a/recipes/chai.html
+++ b/recipes/chai.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Masala Chai</h1>
     <img src="..\images\chai.jpg">
-    <p>This is a simple Indian drink that is beautifully aromatic, sweet, spicy and incredibly flavourful. It is incredibly easy to prepare by boiling tea leaves with some basic spices and sugar and finishing it off with milk. Its preparation time is at most 5 min</p>
+    <p>This is a simple Indian drink that is beautifully aromatic, sweet, spicy and incredibly flavourful. It is incredibly easy to prepare by boiling tea leaves with some basic spices and sugar and finishing it off with milk. Its preparation time is at most 5 min.</p>
     <h2>Ingredients</h2>
     <ul>
         <li>Assam tea leaves</li>
