--- a/recipes/maggii.html
+++ b/recipes/maggii.html
@@ -7,6 +7,25 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Cheese Maggii</h1>
+    <h1>Cheese Maggi</h1>
+    <img src="../images/maggi.jpg">
+    <p>The ultimate student comfort food. Just boil maggi noodles with taste-maker masala and dissolve some cheese in it.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>maggi noodles</li>
+        <li>2 taste-maker saches</li>
+        <li>2 cheese slices</li>
+        <li>peas</li>
+        <li>carrots</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Place some peas and carrots in rice-cooker</li>
+        <li>Take one set of maggi noodles in a bowl of water and add 2 saches of taste-maker maggi masala to it</li>
+        <li>Bring on high heat and add 2 slices of cheese to the mixture. Stir vigorously to dissolve the cheese</li>
+        <li>When peas and carrots are cooked add it to the noodle mixture</li>
+        <li>When noodles are nice and soft take off the stove and serve</li>
+        <li>Enjoy :)</li>
+    </ol>
 </body>
 </html>
