--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/fishsoup.html">Clear Fish Noodle Soup</a></li>
-        <li><a href="recipes/pasta.html">Pasta</a></li>
-        <li><a href="recipes/maggii.html">Cheese Maggii</a></li>
+        <li><a href="recipes/pasta.html">Spaghetti Alfredo</a></li>
+        <li><a href="recipes/maggii.html">Ultimate Maggi</a></li>
         <li><a href="recipes/chai.html">Masala Chai</a></li>
     </ul>
 </body>
