updated fishsoup and improved soup image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/fishsoup.html">Clear Fish Noodle Soup</a></li>
+        <li><a href="recipes/fishsoup.html">Clear Fish Soup</a></li>
         <li><a href="recipes/pasta.html">Spaghetti Alfredo</a></li>
         <li><a href="recipes/maggii.html">Ultimate Maggi</a></li>
         <li><a href="recipes/chai.html">Masala Chai</a></li>
