--- a/recipes/fishsoup.html
+++ b/recipes/fishsoup.html
@@ -8,5 +8,27 @@
 </head>
 <body>
     <h1>Clear Fish Noodle Soup</h1>
+    <img src="../images/fishsoup.jpg">
+    <p>Simple fish clear soup which can comfort during a tough cold. Just boil fish and vegetables of your choice along with some aromatic spices to create a flavorful broth</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>basa fish fillets</li>
+        <li>sliced carrots</li>
+        <li>sliced bell peppers</li>
+        <li>star anise</li>
+        <li>fresh ground pepper</li>
+        <li>green chilly</li>
+        <li>butter</li>
+    </ul>
+    <h2>Steps</h2>
+    <li>
+        <li>Add fish fillets in a bowl with water</li>
+        <li>Add sliced carrots and bell peppers</li>
+        <li>Add 3 star anise, some fresh ground pepper and one sliced green chilly to the bowl</li>
+        <li>Boil over high heat</li>
+        <li>Once the fillets turn soft and opague in the middle remove the soup</li>
+        <li>Add a slice of butter and stir till dissollved</li>
+        <li>Enjoy and get well soon :)</li>
+    </li>
 </body>
 </html>
