--- a/recipes/maggii.html
+++ b/recipes/maggii.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Cheese Maggi</h1>
     <img src="../images/maggi.jpg">
-    <p>The ultimate student comfort food. Just boil maggi noodles with taste-maker masala and dissolve some cheese in it.</p>
+    <p>The ultimate student comfort food now spicier and creamier. Just boil maggi noodles with taste-maker masala and dissolve some cheese in it.</p>
     <h2>Ingredients</h2>
     <ul>
         <li>maggi noodles</li>
