Fixed titles of all pages

--- a/recipes/fishsoup.html
+++ b/recipes/fishsoup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fish Clear Soup</title>
 </head>
 <body>
     <h1>Clear Fish Noodle Soup</h1>
@@ -21,7 +21,7 @@
         <li>butter</li>
     </ul>
     <h2>Steps</h2>
-    <li>
+    <ol>
         <li>Add fish fillets in a bowl with water</li>
         <li>Add sliced carrots and bell peppers</li>
         <li>Add 3 star anise, some fresh ground pepper and one sliced green chilly to the bowl</li>
@@ -29,6 +29,6 @@
         <li>Once the fillets turn soft and opague in the middle remove the soup</li>
         <li>Add a slice of butter and stir till dissollved</li>
         <li>Enjoy and get well soon :)</li>
-    </li>
+    </ol>
 </body>
 </html>
